新增userinfo姓名、評價，修正評分bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,7 @@
     <string name="textOriginNotFound">origin is not found</string>
     <string name="textDestinationNotFound">destination is not found</string>
     <string name="textOk">確認</string>
+    <string name="textLogout">登出</string>
+    <string name="textCancelCheck">你的訂單已被取消</string>
 
 </resources>
