--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="textSetBankAccount">銀行帳戶設定</string>
     <string name="textCheck">驗證</string>
     <string name="textBankAccount">銀行帳戶</string>
+    <string name="textPreferencesSaved">偏好設定已儲存</string>
 
 
 </resources>
