--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,5 +98,7 @@
     <string name="textUserPhoto">大頭貼</string>
     <string name="textOnline">上線</string>
     <string name="textOffLine">下線</string>
+    <string name="textMain">首頁</string>
+    <string name="textDrive">代駕</string>
 
 </resources>
