新增銀行資料編輯功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,5 +100,6 @@
     <string name="textOffLine">下線</string>
     <string name="textMain">首頁</string>
     <string name="textDrive">代駕</string>
+    <string name="textEdit">編輯</string>
 
 </resources>
