--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,5 +101,6 @@
     <string name="textMain">首頁</string>
     <string name="textDrive">代駕</string>
     <string name="textEdit">編輯</string>
+    <string name="textReaction">意見反應</string>
 
 </resources>
