新增opinion class 意見反應reaction完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,5 +104,8 @@
     <string name="textDrive">代駕</string>
     <string name="textEdit">編輯</string>
     <string name="textReaction">意見反應</string>
+    <string name="textInsertFail">上傳失敗</string>
+    <string name="textInsertSuccess">上傳成功</string>
+    <string name="textCannotbenull">輸入不能為空</string>
 
 </resources>
